Fix spacing of modal components based on props/children

--- a/client/src/components/common/Modal/Modal.module.scss
+++ b/client/src/components/common/Modal/Modal.module.scss
@@ -38,8 +38,12 @@
   }
 }
 
-.title {
-  margin-bottom: var(--vertical-spacer-small);
+.message {
+  margin-top: var(--vertical-spacer-small);
+}
+
+.children {
+  margin-top: calc(2 * var(--vertical-spacer-small));
 }
 
 .message {
